#2497 Split buysell forms by limit and scaled tabs

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -476,6 +476,8 @@
         "top_markets": "Top Markets"
     },
     "exchange": {
+        "limit": "Limit",
+        "scaled": "Scaled",
         "add_quote": "Add",
         "asks": "Sell orders",
         "atr": "Average True Range",
