--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1873,13 +1873,15 @@
             "title": "Direct debit",
             "create": "Create",
             "update": "Update",
+            "claim": "Claim",
             "authorized_account": "Payee",
             "limit_per_period": "Maximum amount per period",
             "period": "Specify period",
             "num_of_periods": "Number of periods",
             "start_date": "First period starts on",
             "create_new_mandate": "Create new mandate",
-            "update_mandate": "Update existing mandate"
+            "update_mandate": "Update existing mandate",
+            "claim_funds": "Claim funds"
         },
         "paper_wallet": {
             "description": "Create a PDF with your account's keys printed (plain text and barcode). If the wallet is unlocked, the private keys are added as well.",
