#2497 Integrate Scaled Orders to Exchange as separate tabs

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1456,7 +1456,7 @@
             "urlNamed": "%(name)s should be url",
             "oneOf": "The field should be one of: %(list)s",
             "oneOfNamed": "%(name)s should be one of: %(list)s",
-            "balance": "Insufficient balance. Available only: %(balance)s",
+            "balance": "Insufficient balance. Available only: %(balance)s %(symbol)s",
 
             "test": ""
         }
