--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1875,13 +1875,15 @@
             "update": "Update",
             "claim": "Claim",
             "authorized_account": "Payee",
+            "authorizing_account": "Payer",
             "limit_per_period": "Maximum amount per period",
             "period": "Specify period",
             "num_of_periods": "Number of periods",
             "start_date": "First period starts on",
             "create_new_mandate": "Create new mandate",
             "update_mandate": "Update existing mandate",
-            "claim_funds": "Claim funds"
+            "claim_funds": "Claim funds",
+            "amount_to_withdraw": "Amount to withdraw"
         },
         "paper_wallet": {
             "description": "Create a PDF with your account's keys printed (plain text and barcode). If the wallet is unlocked, the private keys are added as well.",
