#2497 Add balance and latest bid/ask

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1480,6 +1480,7 @@
             "flat": "Flat"
         },
         "order_count": "Order Count",
+        "order_s": "Order(s)",
         "action": {
             "title": "Action",
             "buy": "Buy",
