--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1885,7 +1885,8 @@
             "claim_funds": "Claim funds",
             "amount_to_withdraw": "Amount to withdraw",
             "current_period_expires": "Current period expires on",
-            "first_period_not_started": "First period is not started!"
+            "first_period_not_started": "First period is not started!",
+            "limit": "limit"
         },
         "paper_wallet": {
             "description": "Create a PDF with your account's keys printed (plain text and barcode). If the wallet is unlocked, the private keys are added as well.",
