--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1895,7 +1895,14 @@
             "amount_to_withdraw": "Amount to collect",
             "current_period_expires": "Current period ends",
             "first_period_not_started": "First period has not started!",
-            "limit": "limit"
+            "limit": "limit",
+            "tooltip": {
+                "authorized_account": "The account that is eligible to collect from your account.",
+                "limit_per_period": "The payee may collect a maximum amount of the specified asset (up to) per period. The payee can only collect once per period, even if not collected in full.",
+                "period": "One period lasts the indicated time interval, e.g. 2 weeks.",
+                "num_of_periods": "After the start time this amount of periods are available consecutively.",
+                "start_time": "The start time of the first period must be in the future when broadcasting."
+            }
         },
         "paper_wallet": {
             "description": "Create a PDF with your account's keys printed (plain text and barcode). If the wallet is unlocked, the private keys are added as well.",
